--- a/Yella/views/HomePage.xaml
+++ b/Yella/views/HomePage.xaml
@@ -8,6 +8,7 @@
 						x:Class="Yella.views.HomePage" Shell.NavBarIsVisible="False" x:Name="mainPage">
 	<ContentPage.Content>
 		<Grid x:Name="MainContainer" RowDefinitions="80,*">
+			<!--Header tiyle-->
 			<Frame HasShadow="True" Grid.Row="0" CornerRadius="0">
 				<Grid ColumnDefinitions="*,Auto"
 							FlowDirection="RightToLeft"
@@ -87,34 +88,35 @@
 					<!--</StackLayout>-->
 				</Grid>
 			</Frame>
-			<Grid Grid.Row="1" x:Name="MainContentGrid" Padding="24,5,24,0"
-						IgnoreSafeArea="{OnPlatform Android=False, iOS=True}"
-						BackgroundColor="{x:StaticResource WhitePageBackgroundColor}"
-						ColumnDefinitions="*,Auto"
-						FlowDirection="RightToLeft"
-						RowDefinitions="Auto,Auto,Auto,*">
+			<!--Body app-->
+			<ScrollView Grid.Row="1"
 
-				<StackLayout Grid.Row="0" Grid.ColumnSpan="2" Padding="20">
-					<Frame BackgroundColor="{x:StaticResource SecondaryPageBackgroundColor}" CornerRadius="5" HasShadow="True"
-								HeightRequest="170">
-						<Image Source="credit3" Aspect="AspectFill" HeightRequest="170"></Image>
-					</Frame>
-				</StackLayout>
+				HorizontalScrollBarVisibility="Never"
+				VerticalScrollBarVisibility="Never"
+				Margin="-4,3,-4,0">
+				<Grid  x:Name="MainContentGrid" Padding="24,5,24,0"
+							IgnoreSafeArea="{OnPlatform Android=False, iOS=True}"
+							BackgroundColor="{x:StaticResource WhitePageBackgroundColor}"
+							ColumnDefinitions="*,Auto"
+							FlowDirection="RightToLeft"
+							RowDefinitions="Auto,Auto,Auto,*">
 
-				<!--<StackLayout Grid.Row="2" Margin="25,0,25,0" Orientation="Horizontal" Spacing="230">
+					<!--credit card-->
+					<StackLayout Grid.Row="0" Grid.ColumnSpan="2" Padding="20">
+						<Frame BackgroundColor="{x:StaticResource SecondaryPageBackgroundColor}" CornerRadius="5" HasShadow="True"
+									HeightRequest="170">
+							<Image Source="credit3" Aspect="AspectFill" HeightRequest="170"></Image>
+						</Frame>
+					</StackLayout>
+
+					<!--<StackLayout Grid.Row="2" Margin="25,0,25,0" Orientation="Horizontal" Spacing="230">
 				<Label Text="جميع الطلبات &gt;" TextColor="{x:StaticResource Gray500}"></Label>
 				<Label Text="الطلبات" TextColor="{x:StaticResource Gray500}"></Label>
 			</StackLayout>-->
+					<!--start the scroll-->
 
-				<ScrollView
-					Grid.Row="1"
-					Grid.Column="0"
-					Grid.ColumnSpan="2"
-					HorizontalScrollBarVisibility="Never"
-					VerticalScrollBarVisibility="Never"
-					Margin="-4,3,-4,0">
 
-					<StackLayout
+					<VerticalStackLayout Grid.Row="1"
 						Spacing="12">
 						<!-- Most Popular Section -->
 						<Label
@@ -173,10 +175,11 @@
 						</Label>
 
 						<Image Source="octopus"></Image>
-					</StackLayout>
-				</ScrollView>
+					</VerticalStackLayout>
 
-			</Grid>
+				</Grid>
+			</ScrollView>
+
 		</Grid>
 
 	</ContentPage.Content>
