--- a/Yella/views/BalancePage.xaml
+++ b/Yella/views/BalancePage.xaml
@@ -2,11 +2,147 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 						xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+						xmlns:model="clr-namespace:Yella.Model"
+						xmlns:controls="clr-namespace:Yella.Controls"
 						x:Class="Yella.views.BalancePage">
 	<ContentPage.Content>
-		<Grid>
-			<Label FontSize="16" HorizontalOptions="Center" Text="Balance" TextColor="{x:StaticResource Primary}"
-						VerticalOptions="Center" />
+		<Grid x:Name="MainContainer" RowDefinitions="80,*">
+			<!--Header tiyle-->
+			<Frame HasShadow="True" Grid.Row="0" CornerRadius="0">
+				<Grid ColumnDefinitions="*,Auto"
+							FlowDirection="RightToLeft"
+							RowDefinitions="Auto,Auto,Auto,*">
+					<!-- Header Text -->
+					<VerticalStackLayout
+						Spacing="4"
+						Grid.Row="0"
+						Grid.Column="0"
+						VerticalOptions="Center">
+						<Image Source="yella" WidthRequest="100" HeightRequest="50" HorizontalOptions="Start"></Image>
+					</VerticalStackLayout>
+
+					<!-- Profile Pic -->
+					<Border
+						WidthRequest="40"
+						HeightRequest="40"
+						VerticalOptions="Center"
+						HorizontalOptions="End"
+						Stroke="{x:StaticResource LightBorderColor}"
+						StrokeThickness="3"
+						Grid.Row="0"
+						Grid.Column="1">
+
+						<Border.StrokeShape>
+							<RoundRectangle CornerRadius="28" />
+						</Border.StrokeShape>
+
+						<Border.GestureRecognizers>
+							<TapGestureRecognizer />
+						</Border.GestureRecognizers>
+
+						<Image
+							VerticalOptions="Center"
+							HorizontalOptions="Center"
+							WidthRequest="40"
+							HeightRequest="40"
+							Source="octopus.png">
+							<Image.Clip>
+								<EllipseGeometry
+									Center="25,25"
+									RadiusX="25"
+									RadiusY="25" />
+							</Image.Clip>
+						</Image>
+
+					</Border>
+
+					<!-- Notification Pic -->
+
+					<Border
+						VerticalOptions="Center"
+						Stroke="White"
+						HorizontalOptions="End">
+
+						<Border.GestureRecognizers>
+							<TapGestureRecognizer />
+						</Border.GestureRecognizers>
+
+						<Image
+							VerticalOptions="Center"
+							HorizontalOptions="Center"
+							WidthRequest="30"
+							HeightRequest="30"
+							Source="notification.png">
+						</Image>
+
+					</Border>
+					<!--</StackLayout>-->
+				</Grid>
+			</Frame>
+			<!--Body app-->
+			<ScrollView Grid.Row="1"
+
+									HorizontalScrollBarVisibility="Never"
+									VerticalScrollBarVisibility="Never"
+									Margin="-4,3,-4,0">
+				<Grid x:Name="MainContentGrid" Padding="15,5,15,0"
+							IgnoreSafeArea="{OnPlatform Android=False, iOS=True}"
+							BackgroundColor="{x:StaticResource WhitePageBackgroundColor}"
+							ColumnDefinitions="*,Auto"
+							FlowDirection="RightToLeft"
+							RowDefinitions="Auto,Auto,Auto,*">
+
+					<!--credit Balance card-->
+					<StackLayout Grid.Row="0" Grid.ColumnSpan="2" Padding="20">
+						<Frame BackgroundColor="{x:StaticResource PrimaryPageBackgroundColor}" CornerRadius="15" HasShadow="True"
+									HeightRequest="160">
+							<Grid ColumnDefinitions="20*,80*" Margin="10,5,10,0" RowDefinitions="30,30,*">
+								<Image Source="octopus" Grid.Row="0" Grid.Column="0" Grid.RowSpan="1"></Image>
+								<VerticalStackLayout Grid.Column="1" Grid.Row="0" Margin="10">
+									<Label Text="يونس فخري" TextColor="{x:StaticResource SecondaryPageBackgroundColor}" FontSize="20"></Label>
+									<Label Text="تاجر تحفيات" TextColor="White " FontSize="12"></Label>
+								</VerticalStackLayout>
+								<VerticalStackLayout Grid.Row="2" Grid.Column="1">
+									<Label Text="Balance" FlowDirection="LeftToRight" FontSize="15" TextColor="White"></Label>
+									<Label Text="10,000 د.ع" FlowDirection="LeftToRight" FontSize="25" TextColor="White"></Label>
+								</VerticalStackLayout>
+
+							</Grid>
+						</Frame>
+					</StackLayout>
+
+					<VerticalStackLayout Grid.Row="1"
+															Spacing="12">
+						<!-- Most Popular Section -->
+						<Label
+							Style="{StaticResource PageSubHeaderStyle}"
+							Margin="15,5,15,0">
+							<Label.FormattedText>
+								<FormattedString>
+									<Span Text="أخر العمليات المالية   " />
+									<Span Text="←" FontSize="20" />
+								</FormattedString>
+							</Label.FormattedText>
+						</Label>
+
+
+							<Grid ColumnDefinitions="*,*"  ColumnSpacing="80" Margin="15">
+							<StackLayout Orientation="Horizontal"  Grid.Column="0">
+								<Frame BackgroundColor="{x:StaticResource PrimaryPageBackgroundColor}">
+									<Label Text="#32" FontSize="12" FontAttributes="Bold" TextColor="White"></Label>
+								</Frame>
+								<VerticalStackLayout Margin="10,0,0,0">
+									<Label Text="عند مندوب التوصيل" Margin="2,0,0,0" FontSize="15" FontAttributes="Bold"
+												TextColor="{x:StaticResource PrimaryPageBackgroundColor}" />
+									<Label Text="2023/11/19" Margin="2,0,0,0" TextColor="LightGray" />
+								</VerticalStackLayout>
+							</StackLayout>
+								<Label Grid.Column="1" Text="69,000 د.ع" Margin="0,0,10,0" FontAttributes="Bold"/>
+							</Grid>
+					</VerticalStackLayout>
+
+				</Grid>
+			</ScrollView>
 
 		</Grid>
 	</ContentPage.Content>
