--- a/Yella/views/BalancePage.xaml
+++ b/Yella/views/BalancePage.xaml
@@ -3,6 +3,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 						xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 						xmlns:model="clr-namespace:Yella.Model"
+						xmlns:models="clr-namespace:Yella.Model"
 						xmlns:controls="clr-namespace:Yella.Controls"
 						x:Class="Yella.views.BalancePage">
 	<ContentPage.Content>
@@ -90,55 +91,100 @@
 							BackgroundColor="{x:StaticResource WhitePageBackgroundColor}"
 							ColumnDefinitions="*,Auto"
 							FlowDirection="RightToLeft"
-							RowDefinitions="Auto,Auto,Auto,*">
+							RowDefinitions="Auto,Auto,Auto,Auto, *">
 
 					<!--credit Balance card-->
-					<StackLayout Grid.Row="0" Grid.ColumnSpan="2" Padding="20">
-						<Frame BackgroundColor="{x:StaticResource PrimaryPageBackgroundColor}" CornerRadius="15" HasShadow="True"
-									HeightRequest="160">
-							<Grid ColumnDefinitions="20*,80*" Margin="10,5,10,0" RowDefinitions="30,30,*">
-								<Image Source="octopus" Grid.Row="0" Grid.Column="0" Grid.RowSpan="1"></Image>
-								<VerticalStackLayout Grid.Column="1" Grid.Row="0" Margin="10">
-									<Label Text="يونس فخري" TextColor="{x:StaticResource SecondaryPageBackgroundColor}" FontSize="20"></Label>
-									<Label Text="تاجر تحفيات" TextColor="White " FontSize="12"></Label>
+
+					<!--Total account Balance-->
+					<StackLayout Grid.Row="1" Grid.ColumnSpan="2" Padding="20">
+						<Frame BackgroundColor="Azure" CornerRadius="15" HasShadow="True"
+									HeightRequest="110">
+							<Grid ColumnDefinitions="50*,50*" Margin="10,0,10,0">
+								<VerticalStackLayout Grid.Column="0">
+									<Label Text="الاجور المستلمة" HorizontalTextAlignment="Center"></Label>
+									<Label Text="5,000" FontAttributes="Bold" FontSize="38" HorizontalTextAlignment="Center"></Label>
 								</VerticalStackLayout>
-								<VerticalStackLayout Grid.Row="2" Grid.Column="1">
-									<Label Text="Balance" FlowDirection="LeftToRight" FontSize="15" TextColor="White"></Label>
-									<Label Text="10,000 د.ع" FlowDirection="LeftToRight" FontSize="25" TextColor="White"></Label>
+								<VerticalStackLayout Grid.Column="1">
+									<Label Text="الذمة" HorizontalTextAlignment="Center"></Label>
+									<Label Text="10,000" FontAttributes="Bold" FontSize="38" HorizontalTextAlignment="Center"></Label>
 								</VerticalStackLayout>
 
 							</Grid>
 						</Frame>
 					</StackLayout>
 
-					<VerticalStackLayout Grid.Row="1"
-															Spacing="12">
-						<!-- Most Popular Section -->
+					<!--Balance Account orders details-->
+					<ScrollView Orientation="Horizontal" Grid.Row="2" HorizontalScrollBarVisibility="Never">
+						<StackLayout Orientation="Horizontal" Spacing="20" Margin="20,0,20,0">
+							<Frame BackgroundColor="#DCF3FF" WidthRequest="150" HeightRequest="100">
+								<VerticalStackLayout>
+									<Label Text="مكتمل"></Label>
+									<Label Text="24" FontSize="35" HorizontalTextAlignment="End"></Label>
+								</VerticalStackLayout>
+							</Frame>
+							<Frame BackgroundColor="#FFF3DC" WidthRequest="150" HeightRequest="100">
+								<VerticalStackLayout>
+									<Label Text="راجع"></Label>
+									<Label Text="6" FontSize="35" HorizontalTextAlignment="End"></Label>
+								</VerticalStackLayout>
+							</Frame>
+							<Frame BackgroundColor="#E3FFDC" WidthRequest="150" HeightRequest="100">
+								<VerticalStackLayout>
+									<Label Text="أستبدال"></Label>
+									<Label Text="5" FontSize="35" HorizontalTextAlignment="End"></Label>
+								</VerticalStackLayout>
+							</Frame>
+							<Frame BackgroundColor="#DFDCFF" WidthRequest="150" HeightRequest="100">
+								<VerticalStackLayout>
+									<Label Text="واصل جزئي"></Label>
+									<Label Text="2" FontSize="35" HorizontalTextAlignment="End"></Label>
+								</VerticalStackLayout>
+							</Frame>
+						</StackLayout>
+					</ScrollView>
+
+					<VerticalStackLayout Grid.Row="3"
+															Spacing="12" Margin="0,10,0,0">
 						<Label
 							Style="{StaticResource PageSubHeaderStyle}"
 							Margin="15,5,15,0">
 							<Label.FormattedText>
 								<FormattedString>
-									<Span Text="أخر العمليات المالية   " />
+									<Span Text="أخر العمليات المالية " />
 									<Span Text="←" FontSize="20" />
 								</FormattedString>
 							</Label.FormattedText>
 						</Label>
 
+						<CollectionView x:Name="BalanceDetails"
+														HorizontalOptions="Center"
+														SelectionMode="Single"
+														EmptyView="No Data Available">
+							<CollectionView.ItemsLayout>
+								<LinearItemsLayout
+									Orientation="Vertical" ItemSpacing="10" />
+							</CollectionView.ItemsLayout>
+							<CollectionView.ItemTemplate>
+								<DataTemplate
+									x:DataType="models:OrderView">
 
-							<Grid ColumnDefinitions="*,*"  ColumnSpacing="80" Margin="15">
-							<StackLayout Orientation="Horizontal"  Grid.Column="0">
-								<Frame BackgroundColor="{x:StaticResource PrimaryPageBackgroundColor}">
-									<Label Text="#32" FontSize="12" FontAttributes="Bold" TextColor="White"></Label>
-								</Frame>
-								<VerticalStackLayout Margin="10,0,0,0">
-									<Label Text="عند مندوب التوصيل" Margin="2,0,0,0" FontSize="15" FontAttributes="Bold"
-												TextColor="{x:StaticResource PrimaryPageBackgroundColor}" />
-									<Label Text="2023/11/19" Margin="2,0,0,0" TextColor="LightGray" />
-								</VerticalStackLayout>
-							</StackLayout>
-								<Label Grid.Column="1" Text="69,000 د.ع" Margin="0,0,10,0" FontAttributes="Bold"/>
-							</Grid>
+									<Grid ColumnDefinitions="*,*" ColumnSpacing="80" Margin="15,0,15,0">
+										<StackLayout Orientation="Horizontal" Grid.Column="0">
+											<Frame BackgroundColor="{x:StaticResource PrimaryPageBackgroundColor}">
+												<Label Text="{Binding OrderId}" FontSize="12" FontAttributes="Bold" TextColor="White"></Label>
+											</Frame>
+											<VerticalStackLayout Margin="10,0,0,0">
+												<Label Text="{Binding Status}" Margin="2,0,0,0" FontSize="15" FontAttributes="Bold"
+															TextColor="{x:StaticResource PrimaryPageBackgroundColor}" />
+												<Label Text="{Binding OrderDate}" Margin="2,0,0,0" TextColor="LightGray" />
+											</VerticalStackLayout>
+										</StackLayout>
+										<Label Grid.Column="1" Text="{Binding OrderTotal}" Margin="0,0,10,0" FontAttributes="Bold" FontSize="18"
+													TextColor="Green" />
+									</Grid>
+								</DataTemplate>
+							</CollectionView.ItemTemplate>
+						</CollectionView>
 					</VerticalStackLayout>
 
 				</Grid>
