--- a/Yella/views/HomePage.xaml
+++ b/Yella/views/HomePage.xaml
@@ -4,9 +4,9 @@
 						xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 						xmlns:yella="clr-namespace:Yella"
 						xmlns:models="clr-namespace:Yella.Model"
-						xmlns:maui="clr-namespace:LiveChartsCore.SkiaSharpView.Maui;assembly=LiveChartsCore.SkiaSharpView.Maui"
 						xmlns:controls="clr-namespace:Yella.Controls"
-						x:Class="Yella.views.HomePage" Shell.NavBarIsVisible="False" x:Name="mainPage">
+						x:Class="Yella.views.HomePage" Shell.NavBarIsVisible="False"
+						x:Name="mainPage">
 	<ContentPage.Content>
 		<Grid x:Name="MainContainer" RowDefinitions="80,*">
 			<!--Header tiyle-->
@@ -103,10 +103,22 @@
 							RowDefinitions="Auto,Auto,Auto,*">
 
 					<!--credit card-->
+					<!--credit Balance card-->
 					<StackLayout Grid.Row="0" Grid.ColumnSpan="2" Padding="20">
-						<Frame BackgroundColor="{x:StaticResource SecondaryPageBackgroundColor}" CornerRadius="5" HasShadow="True"
-									HeightRequest="170">
-							<Image Source="credit3" Aspect="AspectFill" HeightRequest="170"></Image>
+						<Frame BackgroundColor="{x:StaticResource PrimaryPageBackgroundColor}" CornerRadius="15" HasShadow="True"
+									HeightRequest="160">
+							<Grid ColumnDefinitions="20*,80*" Margin="10,5,10,0" RowDefinitions="30,30,*">
+								<Image Source="octopus" Grid.Row="0" Grid.Column="0" Grid.RowSpan="1"></Image>
+								<VerticalStackLayout Grid.Column="1" Grid.Row="0" Margin="10">
+									<Label Text="يونس فخري" TextColor="{x:StaticResource SecondaryPageBackgroundColor}" FontSize="20"></Label>
+									<Label Text="تاجر تحفيات" TextColor="White " FontSize="12"></Label>
+								</VerticalStackLayout>
+								<VerticalStackLayout Grid.Row="2" Grid.Column="1">
+									<Label Text="Balance" FlowDirection="LeftToRight" FontSize="15" TextColor="White"></Label>
+									<Label Text="10,000 د.ع" FlowDirection="LeftToRight" FontSize="25" TextColor="White"></Label>
+								</VerticalStackLayout>
+
+							</Grid>
 						</Frame>
 					</StackLayout>
 
@@ -118,7 +130,7 @@
 							Margin="0,12,0,0">
 							<Label.FormattedText>
 								<FormattedString>
-									<Span Text="جميع الطلبات   " />
+									<Span Text="جميع الطلبات " />
 									<Span Text="←" FontSize="20" />
 								</FormattedString>
 							</Label.FormattedText>
@@ -162,7 +174,7 @@
 							Margin="0,12,0,0">
 							<Label.FormattedText>
 								<FormattedString>
-									<Span Text="البيانات الأحصائية   " />
+									<Span Text="البيانات الأحصائية " />
 									<Span Text="←" FontSize="20" />
 								</FormattedString>
 							</Label.FormattedText>
