--- a/Yella/AppShell.xaml
+++ b/Yella/AppShell.xaml
@@ -1,17 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<Shell
+<simpleShell:SimpleShell
 	x:Class="Yella.AppShell"
 	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 	xmlns:local="clr-namespace:Yella.views"
-	Shell.FlyoutBehavior="Disabled">
+	xmlns:simpleShell="clr-namespace:SimpleToolkit.SimpleShell;assembly=SimpleToolkit.SimpleShell"
+	xmlns:controls="clr-namespace:Yella.views.Controls"
+	Shell.FlyoutBehavior="Disabled"
+	Background="{AppThemeBinding Default=White, Dark=Black}">
 
-	<ShellContent
+	<TabBar x:Name="tabBar">
+	</TabBar>
+	<simpleShell:SimpleShell.RootPageContainer>
+		<Grid IgnoreSafeArea="True" FlowDirection="RightToLeft">
+			<simpleShell:SimpleNavigationHost
+				x:Name="pageContainer" />
+			<controls:TabBarView
+				x:Name="tabBarView"
+				VerticalOptions="End" HorizontalOptions="Fill"
+				CurrentPageSelectionChanged="TabBarViewCurrentPageChanged" />
+			<Rectangle
+				x:Name="bottomBackgroundRectangle"
+				Background="{StaticResource Primary}"
+				VerticalOptions="End" />
+		</Grid>
+	</simpleShell:SimpleShell.RootPageContainer>
+	<!--<ShellContent
 		Title="Introduction"
 		ContentTemplate="{DataTemplate local:IntroPage}"
-		Route="IntroPage" />
-	<TabBar Route="DashboardTab">
+		Route="IntroPage" />-->
+	<!--<TabBar Route="DashboardTab">
 
 
 		<Tab Title="اعدادات" Icon="ellipsissolid">
@@ -40,5 +59,5 @@
 				ContentTemplate="{DataTemplate local:HomePage}"
 				Route="HomePage" />
 		</Tab>
-	</TabBar>
-</Shell>
+	</TabBar>-->
+</simpleShell:SimpleShell>
