--- a/Yella/Resources/Styles/Styles.xaml
+++ b/Yella/Resources/Styles/Styles.xaml
@@ -421,7 +421,7 @@
 						Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}" />
 	</Style>
 
-	<Style TargetType="Shell" ApplyToDerivedTypes="True">
+	<!--<Style TargetType="Shell" ApplyToDerivedTypes="True">
 		<Setter Property="Shell.BackgroundColor"
 						Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource Gray950}}" />
 		<Setter Property="Shell.ForegroundColor"
@@ -441,12 +441,30 @@
 						Value="{AppThemeBinding Light={StaticResource SecondaryPageBackgroundColor}, Dark={StaticResource White}}" />
 		<Setter Property="Shell.TabBarUnselectedColor"
 						Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Gray200}}" />
-	</Style>
+	</Style>-->
 
+    <Style TargetType="Shell" ApplyToDerivedTypes="True">
+        <Setter Property="Shell.BackgroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource Gray950}}" />
+        <Setter Property="Shell.ForegroundColor" Value="{OnPlatform WinUI={StaticResource Primary}, Default={StaticResource White}}" />
+        <Setter Property="Shell.TitleColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource White}}" />
+        <Setter Property="Shell.DisabledColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray950}}" />
+        <Setter Property="Shell.UnselectedColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray200}}" />
+        <Setter Property="Shell.NavBarHasShadow" Value="False" />
+        <Setter Property="Shell.TabBarBackgroundColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}" />
+        <Setter Property="Shell.TabBarForegroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
+        <Setter Property="Shell.TabBarTitleColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
+        <Setter Property="Shell.TabBarUnselectedColor" Value="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource Gray200}}" />
+    </Style>
 
-	<Style TargetType="NavigationPage" ApplyToDerivedTypes="True">
+	<!--<Style TargetType="NavigationPage" ApplyToDerivedTypes="True">
 		<Setter Property="BackgroundColor" Value="{StaticResource PageBackgroundColor}" />
-	</Style>
+	</Style>-->
+
+	    <Style TargetType="NavigationPage">
+        <Setter Property="BarBackgroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource Gray950}}" />
+        <Setter Property="BarTextColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource White}}" />
+        <Setter Property="IconColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource White}}" />
+    </Style>
 
 	<Style TargetType="TabbedPage">
 		<Setter Property="BarBackgroundColor"
@@ -574,7 +592,7 @@
 		<Setter Property="TextColor" Value="{StaticResource TitleHeaderColor}" />
 	</Style>
 
-	<Style TargetType="Label" x:Key="FeaturedPlanetHeaderStyle" BasedOn="{StaticResource BaseMediumLabeltyle}">
+	<!--<Style TargetType="Label" x:Key="FeaturedPlanetHeaderStyle" BasedOn="{StaticResource BaseMediumLabeltyle}">
 		<Setter Property="FontSize" Value="22" />
 		<Setter Property="TextColor" Value="{StaticResource LightTextColor}" />
 	</Style>
@@ -592,14 +610,14 @@
 	<Style TargetType="Label" x:Key="AllPlanetHeaderSubtitleStyle" BasedOn="{StaticResource BaseRegularLabeltyle}">
 		<Setter Property="FontSize" Value="12" />
 		<Setter Property="TextColor" Value="{StaticResource LightTextColor}" />
-	</Style>
+	</Style>-->
 
-	<Style TargetType="Label" x:Key="MenuLabelStyle" BasedOn="{StaticResource BaseRegularLabeltyle}">
+	<!--<Style TargetType="Label" x:Key="MenuLabelStyle" BasedOn="{StaticResource BaseRegularLabeltyle}">
 		<Setter Property="FontSize" Value="14" />
 		<Setter Property="TextColor" Value="#CCCCCC" />
-	</Style>
+	</Style>-->
 
-	<Style TargetType="Label" x:Key="PlanetHeaderStyle" BasedOn="{StaticResource BaseBoldLabeltyle}">
+	<!--<Style TargetType="Label" x:Key="PlanetHeaderStyle" BasedOn="{StaticResource BaseBoldLabeltyle}">
 		<Setter Property="FontSize" Value="48" />
 		<Setter Property="TextColor" Value="{StaticResource LightTextColor}" />
 	</Style>
@@ -612,5 +630,5 @@
 	<Style TargetType="Label" x:Key="PlanetDetailsTextStyle" BasedOn="{StaticResource BaseRegularLabeltyle}">
 		<Setter Property="FontSize" Value="16" />
 		<Setter Property="TextColor" Value="{StaticResource LightTextColor}" />
-	</Style>
+	</Style>-->
 </ResourceDictionary>
