--- a/Yella/views/IntroPage.xaml
+++ b/Yella/views/IntroPage.xaml
@@ -4,12 +4,16 @@
 						xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 						xmlns:viewModels="clr-namespace:Yella.ViewModel"
 						xmlns:models="clr-namespace:Yella.Model"
+						xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
 						x:Class="Yella.views.IntroPage"
 						x:DataType="viewModels:IntroPageViewModel"
 						Shell.NavBarIsVisible="False"
 						NavigationPage.HasNavigationBar="False"
 						Title="IntroPage" BackgroundColor="White">
-	<Grid Margin="50" RowDefinitions="0.05*, 0.5*,0.3*, 0.1*" >
+	<ContentPage.Behaviors>
+		<toolkit:StatusBarBehavior StatusBarColor="White" />
+	</ContentPage.Behaviors>
+	<Grid Margin="50" RowDefinitions="0.05*, 0.5*,0.3*, 0.1*">
 		<StackLayout Grid.Row="0" HorizontalOptions="Center" VerticalOptions="Center" Orientation="Vertical" Spacing="10">
 			<Image Source="yella.svg"></Image>
 			<Label Text="نسهل توصيل الطلبات بينك وبين الزبون" FontFamily="Arial" TextColor="Gray " Margin="50,0,0,0"></Label>
