--- a/Yella/views/LoginPage.xaml
+++ b/Yella/views/LoginPage.xaml
@@ -1,45 +1,50 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Yella.views.LoginPage" Shell.NavBarIsVisible="False">
+						xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+						xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+						x:Class="Yella.views.LoginPage" Shell.NavBarIsVisible="False">
+	<ContentPage.Behaviors>
+		<toolkit:StatusBarBehavior StatusBarColor="White" />
+	</ContentPage.Behaviors>
 
-    <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
+	<ScrollView>
+		<VerticalStackLayout
+			Spacing="25"
+			Padding="30,0"
+			VerticalOptions="Center">
 
-            <Image
-                Source="splash.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
+			<Image
+				Source="splash.png"
+				SemanticProperties.Description="Cute dot net bot waving hi to you!"
+				HeightRequest="200"
+				HorizontalOptions="Center" />
 
-            <Label
-                Text="Welcome to Yella Track"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
+			<Label
+				Text="Welcome to Yella Track"
+				SemanticProperties.HeadingLevel="Level2"
+				SemanticProperties.Description="Welcome to dot net Multi platform App U I"
+				FontSize="18"
+				HorizontalOptions="Center" />
 
-						<Entry x:Name="UsernameTxt" Placeholder="@username"  />
-						<Entry x:Name="PasswordTxt" Placeholder="@Password" />
-			       <Label 
-			        Text="Forget Password"
-			        VerticalOptions="Center" 
-			        HorizontalOptions="Start" >
+			<Entry x:Name="UsernameTxt" Placeholder="@username" />
+			<Entry x:Name="PasswordTxt" Placeholder="@Password" />
+			<Label
+				Text="Forget Password"
+				VerticalOptions="Center"
+				HorizontalOptions="Start">
 
-						  </Label>
-<CarouselView>
+			</Label>
+			<CarouselView>
 
-</CarouselView>
-            <Button
-                x:Name="LoginButton"
-                Text="Yella"
-                Clicked="LoginValidation"
-                HorizontalOptions="Center" MinimumWidthRequest="300" />
+			</CarouselView>
+			<Button
+				x:Name="LoginButton"
+				Text="Yella"
+				Clicked="LoginValidation"
+				HorizontalOptions="Center" MinimumWidthRequest="300" />
 
-        </VerticalStackLayout>
-    </ScrollView>
+		</VerticalStackLayout>
+	</ScrollView>
 
 </ContentPage>
