--- a/Yella/views/TrackPage.xaml
+++ b/Yella/views/TrackPage.xaml
@@ -2,8 +2,12 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 						xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+						xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
 						x:Class="Yella.views.TrackPage">
+	<ContentPage.Behaviors>
+		<toolkit:StatusBarBehavior StatusBarColor="White"  />
+	</ContentPage.Behaviors>
 	<ContentPage.Content>
-		
+
 	</ContentPage.Content>
 </ContentPage>
