--- a/Yella/views/IntroPage.xaml
+++ b/Yella/views/IntroPage.xaml
@@ -16,9 +16,7 @@
 	<Grid Margin="50" RowDefinitions="0.05*, 0.5*,0.3*, 0.1*">
 		<StackLayout Grid.Row="0" HorizontalOptions="Center" VerticalOptions="Center" Orientation="Vertical" Spacing="10">
 			<Image Source="yella.svg"></Image>
-			<Label Text="نسهل توصيل الطلبات بينك وبين الزبون" FontFamily="Arial" TextColor="Gray " Margin="50,0,0,0"></Label>
-			<Image Source="backgrounpattern.svg"></Image>
-
+			<Label Text="نسهل توصيل الطلبات بينك وبين الزبون" FontFamily="Arial" TextColor="Gray " Margin="25,0,0,0"></Label>
 		</StackLayout>
 		<StackLayout Margin="10" Grid.Row="2" Orientation="Vertical">
 			<CarouselView IndicatorView="IntroProgressIndicator" ItemsSource="{Binding IntoScreens}"
@@ -41,14 +39,7 @@
 			</StackLayout>
 		</StackLayout>
 		<StackLayout Grid.Row="4" Spacing="10" Margin="10">
-			<Frame HeightRequest="45" BackgroundColor="{x:StaticResource Primary}">
-				<Label HorizontalTextAlignment="Center"
-							VerticalTextAlignment="Center" Text="Yella" TextColor="White" Margin="0,0,0,-10" HorizontalOptions="Center">
-				</Label>
-				<Frame.GestureRecognizers>
-					<TapGestureRecognizer Command="{Binding SigningCommand}" />
-				</Frame.GestureRecognizers>
-			</Frame>
+			<Button Text="Yella" Command="{Binding SigningCommand}" BackgroundColor="{x:StaticResource Primary}" />
 			<Label LineBreakMode="WordWrap" HorizontalOptions="Center">
 				<Label.FormattedText>
 					<FormattedString>
