--- a/Yella/views/NewOrderPage.xaml
+++ b/Yella/views/NewOrderPage.xaml
@@ -3,11 +3,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 						xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 						xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+						Padding="16,32"
+						Background="white"
 						x:Class="Yella.views.NewOrderPage">
 	<ContentPage.Behaviors>
 		<toolkit:StatusBarBehavior StatusBarColor="White" />
 	</ContentPage.Behaviors>
 	<ContentPage.Content>
-
+<Label Text="NewOrder"></Label>
 	</ContentPage.Content>
 </ContentPage>
