--- a/Yella/UserControl/TimelineTracker.xaml
+++ b/Yella/UserControl/TimelineTracker.xaml
@@ -1,7 +1,38 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
+
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="UserControl.TimelineTracker">
-    <VerticalStackLayout>
-    </VerticalStackLayout>
+						xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+						xmlns:viewModels="Yella.UserControl"
+						xmlns:userControl="clr-namespace:Yella.UserControl"
+						x:Class="Yella.UserControl.TimelineTracker">
+	<ContentView.BindingContext>
+		<userControl:ProgressViewModel />
+	</ContentView.BindingContext>
+	<VerticalStackLayout>
+		<ListView ItemsSource="{Binding Steps}">
+			<ListView.ItemTemplate>
+				<DataTemplate>
+					<ViewCell>
+						<StackLayout>
+							<Label Text="{Binding Title}" />
+							<Label Text="{Binding StartingDate, StringFormat='Start: {0:d}'}" />
+							<Label Text="{Binding EndingDate, StringFormat='End: {0:d}'}" />
+							<Label Text="Status:">
+								<Label.Triggers>
+									<DataTrigger TargetType="Label" Binding="{Binding Status}" Value="True">
+										<Setter Property="TextColor" Value="Green" />
+										<Setter Property="Text" Value="Completed" />
+									</DataTrigger>
+									<DataTrigger TargetType="Label" Binding="{Binding Status}" Value="False">
+										<Setter Property="TextColor" Value="Red" />
+										<Setter Property="Text" Value="Pending" />
+									</DataTrigger>
+								</Label.Triggers>
+							</Label>
+						</StackLayout>
+					</ViewCell>
+				</DataTemplate>
+			</ListView.ItemTemplate>
+		</ListView>
+	</VerticalStackLayout>
 </ContentView>
