--- a/Yella/views/TrackPage.xaml
+++ b/Yella/views/TrackPage.xaml
@@ -3,43 +3,15 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 						xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 						xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-						xmlns:viewModels="Yella.UserControl"
+
 						xmlns:userControl="clr-namespace:Yella.UserControl"
-						xmlns:userControl1="clr-namespace:UserControl"
 						x:Class="Yella.views.TrackPage">
 	<ContentPage.Behaviors>
 		<toolkit:StatusBarBehavior StatusBarColor="White" />
 	</ContentPage.Behaviors>
- <ContentPage.BindingContext>
-        <userControl:ProgressViewModel />
-    </ContentPage.BindingContext>
 	<ContentPage.Content>
-		<userControl1:TimelineTracker>
-			<ListView ItemsSource="{Binding Steps}">
-				<ListView.ItemTemplate>
-					<DataTemplate>
-						<ViewCell>
-							<StackLayout>
-								<Label Text="{Binding Title}" />
-								<Label Text="{Binding StartingDate, StringFormat='Start: {0:d}'}" />
-								<Label Text="{Binding EndingDate, StringFormat='End: {0:d}'}" />
-								<Label Text="Status:">
-									<Label.Triggers>
-										<DataTrigger TargetType="Label" Binding="{Binding Status}" Value="True">
-											<Setter Property="TextColor" Value="Green" />
-											<Setter Property="Text" Value="Completed" />
-										</DataTrigger>
-										<DataTrigger TargetType="Label" Binding="{Binding Status}" Value="False">
-											<Setter Property="TextColor" Value="Red" />
-											<Setter Property="Text" Value="Pending" />
-										</DataTrigger>
-									</Label.Triggers>
-								</Label>
-							</StackLayout>
-						</ViewCell>
-					</DataTemplate>
-				</ListView.ItemTemplate>
-			</ListView>
-		</userControl1:TimelineTracker>
+		<userControl:TimelineTracker>
+
+		</userControl:TimelineTracker>
 	</ContentPage.Content>
 </ContentPage>
